--- a/FRONT/my-proyecto-app/src/app/pages/ordenproduccion/ordenproduccion.component.html
+++ b/FRONT/my-proyecto-app/src/app/pages/ordenproduccion/ordenproduccion.component.html
@@ -116,10 +116,10 @@
               </div>
               <div>
                 <label class="block text-sm font-medium text-gray-700">Responsable</label>
-                <select [(ngModel)]="formData.id_personal" name="id_personal" required
+                  <select [(ngModel)]="formData.responsable" name="responsable" required
                         class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
                   <option value="">Seleccione...</option>
-                  <option *ngFor="let p of personal" [value]="p.id_personal">{{ p.nombre }} {{ p.apellido }}</option>
+                    <option *ngFor="let p of personal" [value]="p.id">{{ p.nombre_completo }}</option>
                 </select>
               </div>
             </div>
