--- a/FRONT/my-proyecto-app/src/app/pages/turnos/turnos.component.html
+++ b/FRONT/my-proyecto-app/src/app/pages/turnos/turnos.component.html
@@ -86,8 +86,8 @@
                     <label class="block text-sm font-medium text-gray-700">Estado</label>
                     <select [(ngModel)]="formData.estado" name="estado"
                             class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm py-2 px-3 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500">
-                      <option value="Activo">Activo</option>
-                      <option value="Inactivo">Inactivo</option>
+                      <option value="activo">Activo</option>
+                      <option value="inactivo">Inactivo</option>
                     </select>
                   </div>
                 </form>
